# news-roundup

./: .gitignore  README.md  crawler.js  crawler.py  manage.py  package-lock.json  package.json  pyproject.toml
data/: torchbox-clients.json
docs/: example-prompt.md
newscrawler/accounts/: apps.py
newscrawler/accounts/migrations/: 0001_initial.py
newscrawler/core/: asgi.py  settings.py  urls.py  wsgi.py
newscrawler/news/: apps.py
